stage0/src/include/lean/lean.h

static inline bool lean_is_big_object_tag(uint8_t tag) {
    return tag == LeanArray || tag == LeanStructArray || tag == LeanScalarArray || tag == LeanString;
}
typedef struct {
    int      m_rc;
    unsigned m_cs_sz:16;
    unsigned m_other:8;
    unsigned m_tag:8;
} lean_object;
typedef lean_object * lean_obj_arg;   
typedef lean_object * b_lean_obj_arg; 
typedef lean_object * lean_obj_res;   
typedef lean_object * b_lean_obj_res; 
LEAN_EXPORT LEAN_NORETURN void lean_internal_panic(char const * msg);
LEAN_EXPORT LEAN_NORETURN void lean_internal_panic_out_of_memory(void);
LEAN_EXPORT LEAN_NORETURN void lean_internal_panic_unreachable(void);
LEAN_EXPORT LEAN_NORETURN void lean_internal_panic_rc_overflow(void);
LEAN_EXPORT LEAN_NORETURN void lean_internal_panic_overflow(void);
static inline bool lean_is_mt(lean_object * o) {
    return o->m_rc < 0;
}
static inline bool lean_is_closure(lean_object * o) { return lean_ptr_tag(o) == LeanClosure; }
static inline bool lean_is_array(lean_object * o) { return lean_ptr_tag(o) == LeanArray; }
static inline bool lean_is_mpz(lean_object * o) { return lean_ptr_tag(o) == LeanMPZ; }
static inline bool lean_is_external(lean_object * o) { return lean_ptr_tag(o) == LeanExternal; }
static inline uint8_t lean_is_exclusive_obj(lean_object * o) {
    return lean_is_exclusive(o);
}
LEAN_EXPORT bool lean_io_check_canceled_core(void);
LEAN_EXPORT void lean_io_cancel_core(b_lean_obj_arg t);
LEAN_EXPORT uint8_t lean_io_get_task_state_core(b_lean_obj_arg t);
LEAN_EXPORT b_lean_obj_res lean_io_wait_any_core(b_lean_obj_arg task_list);
LEAN_EXPORT lean_object * lean_int_big_neg(lean_object * a);
LEAN_EXPORT lean_object * lean_int_big_add(lean_object * a1, lean_object * a2);
LEAN_EXPORT lean_object * lean_int_big_sub(lean_object * a1, lean_object * a2);
LEAN_EXPORT lean_object * lean_int_big_mul(lean_object * a1, lean_object * a2);
LEAN_EXPORT lean_object * lean_int_big_div(lean_object * a1, lean_object * a2);
LEAN_EXPORT lean_object * lean_int_big_div_exact(lean_object * a1, lean_object * a2);
LEAN_EXPORT lean_object * lean_int_big_mod(lean_object * a1, lean_object * a2);
LEAN_EXPORT lean_object * lean_int_big_ediv(lean_object * a1, lean_object * a2);
LEAN_EXPORT lean_object * lean_int_big_emod(lean_object * a1, lean_object * a2);
LEAN_EXPORT bool lean_int_big_eq(lean_object * a1, lean_object * a2);
LEAN_EXPORT bool lean_int_big_le(lean_object * a1, lean_object * a2);
LEAN_EXPORT bool lean_int_big_lt(lean_object * a1, lean_object * a2);
LEAN_EXPORT bool lean_int_big_nonneg(lean_object * a);
static inline lean_obj_res lean_int_to_int(int n) {
    if (sizeof(void*) == 8)
        return lean_box((unsigned)(n));
    else if (LEAN_MIN_SMALL_INT <= n && n <= LEAN_MAX_SMALL_INT)
        return lean_box((unsigned)(n));
    else
        return lean_big_int_to_int(n);
}
static inline lean_obj_res lean_int_neg(b_lean_obj_arg a) {
    if (LEAN_LIKELY(lean_is_scalar(a))) {
        return lean_int64_to_int(-lean_scalar_to_int64(a));
    } else {
        return lean_int_big_neg(a);
    }
}
static inline lean_obj_res lean_int_neg_succ_of_nat(lean_obj_arg a) {
    lean_obj_res s  = lean_nat_succ(a);    lean_dec(a);
    lean_obj_res i  = lean_nat_to_int(s);  
    lean_obj_res r  = lean_int_neg(i);     lean_dec(i);
    return r;
}
static inline lean_obj_res lean_int_add(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        return lean_int64_to_int(lean_scalar_to_int64(a1) + lean_scalar_to_int64(a2));
    } else {
        return lean_int_big_add(a1, a2);
    }
}
static inline lean_obj_res lean_int_sub(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        return lean_int64_to_int(lean_scalar_to_int64(a1) - lean_scalar_to_int64(a2));
    } else {
        return lean_int_big_sub(a1, a2);
    }
}
static inline lean_obj_res lean_int_mul(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        return lean_int64_to_int(lean_scalar_to_int64(a1) * lean_scalar_to_int64(a2));
    } else {
        return lean_int_big_mul(a1, a2);
    }
}
static inline lean_obj_res lean_int_div(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        if (sizeof(void*) == 8) {
            int64_t v1 = lean_scalar_to_int(a1);
            int64_t v2 = lean_scalar_to_int(a2);
            if (v2 == 0)
                return lean_box(0);
            else
                return lean_int64_to_int(v1 / v2);
        } else {
            int v1 = lean_scalar_to_int(a1);
            int v2 = lean_scalar_to_int(a2);
            if (v2 == 0)
                return lean_box(0);
            else
                return lean_int_to_int(v1 / v2);
        }
    } else {
        return lean_int_big_div(a1, a2);
    }
}
static inline lean_obj_res lean_int_div_exact(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        if (sizeof(void*) == 8) {
            int64_t v1 = lean_scalar_to_int(a1);
            int64_t v2 = lean_scalar_to_int(a2);
            if (v2 == 0)
                return lean_box(0);
            else
                return lean_int64_to_int(v1 / v2);
        } else {
            int v1 = lean_scalar_to_int(a1);
            int v2 = lean_scalar_to_int(a2);
            if (v2 == 0)
                return lean_box(0);
            else
                return lean_int_to_int(v1 / v2);
        }
    } else {
        return lean_int_big_div_exact(a1, a2);
    }
}
static inline lean_obj_res lean_int_mod(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        if (sizeof(void*) == 8) {
            int64_t v1 = lean_scalar_to_int64(a1);
            int64_t v2 = lean_scalar_to_int64(a2);
            if (v2 == 0)
                return a1;
            else
                return lean_int64_to_int(v1 % v2);
        } else {
            int v1 = lean_scalar_to_int(a1);
            int v2 = lean_scalar_to_int(a2);
            if (v2 == 0)
                return a1;
            else
                return lean_int_to_int(v1 % v2);
        }
    } else {
        return lean_int_big_mod(a1, a2);
    }
}
static inline lean_obj_res lean_int_ediv(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        if (sizeof(void*) == 8) {
            int64_t n = lean_scalar_to_int(a1);
            int64_t d = lean_scalar_to_int(a2);
            if (d == 0)
                return lean_box(0);
            else {
                int64_t q = n / d;
                int64_t r = n % d;
                if (r < 0)
                    q = (d > 0) ? q - 1 : q + 1;
                return lean_int64_to_int(q);
            }
        } else {
            int n = lean_scalar_to_int(a1);
            int d = lean_scalar_to_int(a2);
            if (d == 0) {
                return lean_box(0);
            } else {
                int q = n / d;
                int r = n % d;
                if (r < 0)
                    q = (d > 0) ? q - 1 : q + 1;
                return lean_int_to_int(q);
            }
        }
    } else {
        return lean_int_big_ediv(a1, a2);
    }
}
static inline lean_obj_res lean_int_emod(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        if (sizeof(void*) == 8) {
            int64_t n = lean_scalar_to_int64(a1);
            int64_t d = lean_scalar_to_int64(a2);
            if (d == 0) {
                return a1;
            } else {
                int64_t r = n % d;
                if (r < 0)
                    r = (d > 0) ? r + d : r - d;
                return lean_int64_to_int(r);
            }
        } else {
            int n = lean_scalar_to_int(a1);
            int d = lean_scalar_to_int(a2);
            if (d == 0)
                return a1;
            else {
                int r = n % d;
                if (r < 0)
                    r = (d > 0) ? r + d : r - d;
                return lean_int_to_int(r);
            }
        }
    } else {
        return lean_int_big_emod(a1, a2);
    }
}
static inline bool lean_int_eq(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        return a1 == a2;
    } else {
        return lean_int_big_eq(a1, a2);
    }
}
static inline bool lean_int_ne(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    return !lean_int_eq(a1, a2);
}
static inline bool lean_int_le(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        return lean_scalar_to_int(a1) <= lean_scalar_to_int(a2);
    } else {
        return lean_int_big_le(a1, a2);
    }
}
static inline bool lean_int_lt(b_lean_obj_arg a1, b_lean_obj_arg a2) {
    if (LEAN_LIKELY(lean_is_scalar(a1) && lean_is_scalar(a2))) {
        return lean_scalar_to_int(a1) < lean_scalar_to_int(a2);
    } else {
        return lean_int_big_lt(a1, a2);
    }
}
static inline lean_obj_res lean_int_to_nat(lean_obj_arg a) {
    assert(!lean_int_lt(a, lean_box(0)));
    if (lean_is_scalar(a)) {
        return a;
    } else {
        return lean_big_int_to_nat(a);
    }
}
static inline uint8_t lean_int_dec_eq(b_lean_obj_arg a1, b_lean_obj_arg a2) { return lean_int_eq(a1, a2); }
static inline uint8_t lean_int_dec_le(b_lean_obj_arg a1, b_lean_obj_arg a2) { return lean_int_le(a1, a2); }
static inline uint8_t lean_int_dec_lt(b_lean_obj_arg a1, b_lean_obj_arg a2) { return lean_int_lt(a1, a2); }
static inline uint8_t lean_int_dec_nonneg(b_lean_obj_arg a) {
    if (LEAN_LIKELY(lean_is_scalar(a)))
        return lean_scalar_to_int(a) >= 0;
    else
        return lean_int_big_nonneg(a);
}
LEAN_EXPORT int8_t lean_int8_of_big_int(b_lean_obj_arg a);
static inline uint8_t lean_int8_of_int(b_lean_obj_arg a) {
    int8_t res;
    if (lean_is_scalar(a)) {
        res = (int8_t)lean_scalar_to_int64(a);
    } else {
        res = lean_int8_of_big_int(a);
    }
    return (uint8_t)res;
}
static inline uint8_t lean_int8_of_nat(b_lean_obj_arg a) {
    int8_t res;
    if (lean_is_scalar(a)) {
        res = (int8_t)lean_unbox(a);
    } else {
        res = lean_int8_of_big_int(a);
    }
    return (uint8_t)res;
}
static inline lean_obj_res lean_int8_to_int(uint8_t a) {
    int8_t arg = (int8_t)a;
    return lean_int64_to_int((int64_t)arg);
}
static inline uint8_t lean_int8_neg(uint8_t a) {
    return -a;
}
static inline uint8_t lean_int8_sub(uint8_t a1, uint8_t a2) {
    return a1 - a2;
}
static inline uint8_t lean_int8_mul(uint8_t a1, uint8_t a2) {
    return 1U * a1 * a2;
}
static inline uint8_t lean_int8_mod(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;
    if (rhs == 0) return (uint8_t)lhs;
    return (uint8_t)((int16_t)lhs % (int16_t)rhs);
}
static inline uint8_t lean_int8_land(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;
    return (uint8_t)(lhs & rhs);
}
static inline uint8_t lean_int8_lor(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;
    return (uint8_t)(lhs | rhs);
}
static inline uint8_t lean_int8_xor(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (int8_t)a2;
    return (uint8_t)(lhs ^ rhs);
}
static inline uint8_t lean_int8_shift_right(uint8_t a1, uint8_t a2) {
    int8_t lhs = (int8_t)a1;
    int8_t rhs = (((int8_t)a2 % 8) + 8) % 8; 
    return (uint8_t)(lhs >> rhs);
}
static inline uint8_t lean_int8_shift_left(uint8_t a1, uint8_t a2) {
    int8_t rhs = (((int8_t)a2 % 8) + 8) % 8; 
    return a1 << (uint8_t)rhs;
}
static inline uint16_t lean_int8_to_int16(uint8_t a) { return (uint16_t)(int16_t)(int8_t)a; }
static inline uint32_t lean_int8_to_int32(uint8_t a) { return (uint32_t)(int32_t)(int8_t)a; }
static inline uint64_t lean_int8_to_int64(uint8_t a) { return (uint64_t)(int64_t)(int8_t)a; }
static inline size_t lean_int8_to_isize(uint8_t a) { return (size_t)(ptrdiff_t)(int8_t)a; }
static inline bool lean_io_result_is_error(b_lean_obj_arg r) { return lean_ptr_tag(r) == 1; }
static inline b_lean_obj_res lean_io_result_get_error(b_lean_obj_arg r) { assert(lean_io_result_is_error(r)); return lean_ctor_get(r, 0); }
static inline lean_obj_res lean_io_result_take_value(lean_obj_arg r) {
    assert(lean_io_result_is_ok(r));
    lean_object* v = lean_ctor_get(r, 0);
    lean_inc(v);
    lean_dec(r);
    return v;
}
LEAN_EXPORT void lean_io_result_show_error(b_lean_obj_arg r);
LEAN_EXPORT void lean_io_mark_end_initialization(void);
static inline lean_obj_res lean_io_result_mk_error(lean_obj_arg e) {
    lean_object * r = lean_alloc_ctor(1, 1, 0);
    lean_ctor_set(r, 0, e);
    return r;
}
static inline double lean_int8_to_float(uint8_t a) { return (double)(int8_t) a; }
static inline float lean_int8_to_float32(uint8_t a) { return (float)(int8_t) a; }
static inline uint8_t lean_internal_is_stage0(lean_obj_arg _unit) {
    return LEAN_IS_STAGE0;
}