src/runtime/zig/lean_rt.zig

pub extern fn lean_int8_land(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int8_lor(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int8_mod(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int8_mul(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int8_neg(_0: u8) callconv(.c) u8;
pub extern fn lean_int8_of_big_int(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_int8_of_int(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_int8_of_nat(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_int8_shift_left(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int8_shift_right(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int8_sub(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int8_to_float(_0: u8) callconv(.c) f64;
pub extern fn lean_int8_to_float32(_0: u8) callconv(.c) f32;
pub extern fn lean_int8_to_int(_0: u8) callconv(.c) LeanObj;
pub extern fn lean_int8_to_int16(_0: u8) callconv(.c) u16;
pub extern fn lean_int8_to_int32(_0: u8) callconv(.c) u32;
pub extern fn lean_int8_to_int64(_0: u8) callconv(.c) u64;
pub extern fn lean_int8_to_isize(_0: u8) callconv(.c) usize;
pub extern fn lean_int8_xor(_0: u8, _1: u8) callconv(.c) u8;
pub extern fn lean_int_add(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_add(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_div(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_div_exact(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_ediv(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_emod(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_eq(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_int_big_le(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_int_big_lt(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_int_big_mod(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_mul(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_neg(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_big_nonneg(_0: LeanObj) callconv(.c) bool;
pub extern fn lean_int_big_sub(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_dec_eq(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_int_dec_le(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_int_dec_lt(_0: LeanObj, _1: LeanObj) callconv(.c) u8;
pub extern fn lean_int_dec_nonneg(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_int_div(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_div_exact(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_ediv(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_emod(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_eq(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_int_le(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_int_lt(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_int_mod(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_mul(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_ne(_0: LeanObj, _1: LeanObj) callconv(.c) bool;
pub extern fn lean_int_neg(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_neg_succ_of_nat(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_sub(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_int_to_int(_0: c_int) callconv(.c) LeanObj;
pub extern fn lean_int_to_nat(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_internal_enable_debug(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_internal_get_build_type(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_internal_get_default_max_heartbeat() callconv(.c) LeanObj;
pub extern fn lean_internal_get_default_max_memory() callconv(.c) LeanObj;
pub extern fn lean_internal_get_hardware_concurrency(_0: LeanObj) callconv(.c) u32;
pub extern fn lean_internal_has_address_sanitizer(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_internal_has_llvm_backend(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_internal_is_debug(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_internal_is_multi_thread(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_internal_is_stage0(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_internal_panic(_0: ?*anyopaque) callconv(.c) void;
pub extern fn lean_internal_panic_out_of_memory() callconv(.c) void;
pub extern fn lean_internal_panic_overflow() callconv(.c) void;
pub extern fn lean_internal_panic_rc_overflow() callconv(.c) void;
pub extern fn lean_internal_panic_unreachable() callconv(.c) void;
pub extern fn lean_internal_set_exit_on_panic(_0: u8) callconv(.c) LeanObj;
pub extern fn lean_internal_set_max_heartbeat(_0: usize) callconv(.c) LeanObj;
pub extern fn lean_internal_set_max_memory(_0: usize) callconv(.c) LeanObj;
pub extern fn lean_internal_set_thread_stack_size(_0: usize) callconv(.c) LeanObj;
pub extern fn lean_io_allocprof(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_app_path() callconv(.c) LeanObj;
pub extern fn lean_io_as_task(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_basemutex_lock(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_basemutex_new() callconv(.c) LeanObj;
pub extern fn lean_io_basemutex_try_lock(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_basemutex_unlock(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_baserecmutex_lock(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_baserecmutex_new() callconv(.c) LeanObj;
pub extern fn lean_io_baserecmutex_try_lock(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_baserecmutex_unlock(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_basesharedmutex_new() callconv(.c) LeanObj;
pub extern fn lean_io_basesharedmutex_read(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_basesharedmutex_try_read(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_basesharedmutex_try_write(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_basesharedmutex_unlock_read(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_basesharedmutex_unlock_write(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_basesharedmutex_write(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_bind_task(_0: LeanObj, _1: LeanObj, _2: LeanObj, _3: u8) callconv(.c) LeanObj;
pub extern fn lean_io_cancel(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_cancel_core(_0: LeanObj) callconv(.c) void;
pub extern fn lean_io_check_canceled() callconv(.c) u8;
pub extern fn lean_io_check_canceled_core() callconv(.c) bool;
pub extern fn lean_io_condvar_new() callconv(.c) LeanObj;
pub extern fn lean_io_condvar_notify_all(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_condvar_notify_one(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_condvar_wait(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_create_dir(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_create_tempdir() callconv(.c) LeanObj;
pub extern fn lean_io_create_tempfile() callconv(.c) LeanObj;
pub extern fn lean_io_current_dir() callconv(.c) LeanObj;
pub extern fn lean_io_eprintln(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_error_to_string(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_exit(_0: u8) callconv(.c) LeanObj;
pub extern fn lean_io_force_exit(_0: u8) callconv(.c) LeanObj;
pub extern fn lean_io_get_num_heartbeats() callconv(.c) LeanObj;
pub extern fn lean_io_get_random_bytes(_0: usize) callconv(.c) LeanObj;
pub extern fn lean_io_get_task_state(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_get_task_state_core(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_get_tid() callconv(.c) u64;
pub extern fn lean_io_getenv(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_hard_link(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_initializing() callconv(.c) u8;
pub extern fn lean_io_map_task(_0: LeanObj, _1: LeanObj, _2: LeanObj, _3: u8) callconv(.c) LeanObj;
pub extern fn lean_io_mark_end_initialization() callconv(.c) void;
pub extern fn lean_io_metadata(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_mono_ms_now() callconv(.c) LeanObj;
pub extern fn lean_io_mono_nanos_now() callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_flush(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_get_line(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_is_eof(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_prim_handle_is_tty(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_io_prim_handle_lock(_0: LeanObj, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_mk(_0: LeanObj, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_put_str(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_read(_0: LeanObj, _1: usize) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_rewind(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_truncate(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_try_lock(_0: LeanObj, _1: u8) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_unlock(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_prim_handle_write(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_println(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_process_child_kill(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_process_child_pid(_0: LeanObj, _1: LeanObj) callconv(.c) u32;
pub extern fn lean_io_process_child_take_stdin(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_process_child_try_wait(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_process_child_wait(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_process_get_current_dir() callconv(.c) LeanObj;
pub extern fn lean_io_process_get_pid() callconv(.c) u32;
pub extern fn lean_io_process_set_current_dir(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_process_spawn(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_promise_new() callconv(.c) LeanObj;
pub extern fn lean_io_promise_resolve(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_promise_result_opt(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_read_dir(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_realpath(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_remove_dir(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_remove_file(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_rename(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_result_get_error(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_result_is_error(_0: LeanObj) callconv(.c) bool;
pub extern fn lean_io_result_mk_error(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_result_show_error(_0: LeanObj) callconv(.c) void;
pub extern fn lean_io_result_take_value(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_set_heartbeats(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_symlink_metadata(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_timeit(_0: LeanObj, _1: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_wait(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_wait_any(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_io_wait_any_core(_0: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_is_array(_0: LeanObj) callconv(.c) bool;
pub extern fn lean_is_big_object_tag(_0: u8) callconv(.c) bool;
pub extern fn lean_is_closure(_0: LeanObj) callconv(.c) bool;
pub extern fn lean_is_exclusive_obj(_0: LeanObj) callconv(.c) u8;
pub extern fn lean_is_external(_0: LeanObj) callconv(.c) bool;
pub extern fn lean_is_mpz(_0: LeanObj) callconv(.c) bool;
pub extern fn lean_is_mt(_0: LeanObj) callconv(.c) bool;
